fixed bug where scrollbar was shown on chrome

--- a/hello/static/css/style.css
+++ b/hello/static/css/style.css
@@ -1,3 +1,11 @@
+html {
+    scrollbar-width: none !important;
+}
+
+::-webkit-scrollbar {
+    width: 0 !important;
+}
+
 body {
     margin: 0;
 }
